--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>MyPortfolio</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Sur le portfolio de Valérie Tiberghien, retrouvé un développeur Web/ Logiciel FullStack Angular/Symfony">
+    <meta name="keywords" content="portfolio, valerie Tiberghien, dévelooepur Fullstack, Angular, Symfony">
+    <meta name="author" content="Tiberghien Valérie">
+    <title>Portfolio - Valérie Tiberghien - Développeuse FullStack Angular / Symfony</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
